data of anything is useless

--- a/src/next-app/pages/championship/seasons.json
+++ b/src/next-app/pages/championship/seasons.json
@@ -2,473 +2,570 @@
 	"2021": {
 		"races": [
 			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
+				"circuit": "Bahrain",
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"laps": "56",
+				"time": "1:32:03.897"
 			},
 			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
+				"circuit": "Emilia Romagna",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "63",
+				"time": "2:02:34.598"
 			},
 			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
+				"circuit": "Portugal",
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"laps": "66",
+				"time": "1:34:31.421"
 			},
 			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
+				"circuit": "Spain",
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"laps": "66",
+				"time": "1:33:07.680"
 			},
 			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
+				"circuit": "Monaco",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "78",
+				"time": "1:38:56.820"
 			},
 			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
+				"circuit": "Azerbaijan",
+				"driver": "Sergio Perez",
+				"team": "RED BULL RACING HONDA",
+				"laps": "51",
+				"time": "2:13:36.410"
 			},
 			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
+				"circuit": "France",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "53",
+				"time": "1:27:25.770"
 			},
 			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
-			}
-		],
-		"drivers": [
-			{
-				"post": 1,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Styria",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "71",
+				"time": "1:22:18.925"
 			},
 			{
-				"post": 2,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Austria",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "71",
+				"time": "1:23:54.543"
 			},
 			{
-				"post": 3,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Great Britain",
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"laps": "52",
+				"time": "1:58:23.284"
 			},
 			{
-				"post": 4,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Hungary",
+				"driver": "Esteban Ocon",
+				"team": "ALPINE RENAULT",
+				"laps": "70",
+				"time": "2:04:43.199"
 			},
 			{
-				"post": 5,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Belgium",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "1",
+				"time": "0:03:27.071"
 			},
 			{
-				"post": 6,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Netherlands",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "72",
+				"time": "1:30:05.395"
 			},
 			{
-				"post": 7,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Italy",
+				"driver": "Daniel Ricciardo",
+				"team": "MCLAREN MERCEDES",
+				"laps": "53",
+				"time": "1:21:54.365"
 			},
 			{
-				"post": 8,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Russia",
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"laps": "53",
+				"time": "1:30:41.001"
 			},
 			{
-				"post": 9,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Turkey",
+				"driver": "Valtteri Bottas",
+				"team": "MERCEDES",
+				"laps": "58",
+				"time": "1:31:04.103"
 			},
 			{
-				"post": 10,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "United States",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "56",
+				"time": "1:34:36.552"
 			},
 			{
-				"post": 11,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Mexico",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "71",
+				"time": "1:38:39.086"
 			},
 			{
-				"post": 12,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Brazil",
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"laps": "71",
+				"time": "1:32:22.851"
 			},
 			{
-				"post": 13,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Qatar",
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"laps": "57",
+				"time": "1:24:28.471"
 			},
 			{
-				"post": 14,
-				"driver": "",
-				"team": "",
-				"points": 347
+				"circuit": "Saudi Arabia",
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"laps": "50",
+				"time": "2:06:15.118"
 			},
 			{
-				"post": 15,
-				"driver": "",
-				"team": "",
-				"points": 347
-			},
-			{
-				"post": 16,
-				"driver": "",
-				"team": "",
-				"points": 347
-			},
-			{
-				"post": 17,
-				"driver": "",
-				"team": "",
-				"points": 347
-			},
-			{
-				"post": 18,
-				"driver": "",
-				"team": "",
-				"points": 347
-			},
-			{
-				"post": 19,
-				"driver": "",
-				"team": "",
-				"points": 347
-			},
-			{
-				"post": 20,
-				"driver": "",
-				"team": "",
-				"points": 347
-			}
-		],
-		"teams": [
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			},
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			},
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			},
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			},
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			},
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			},
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			},
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			},
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			},
-			{
-				"post": 1,
-				"team": "",
-				"points": 573
-			}
-		]
-	},
-	"2022": {
-		"races": [
-			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
-			},
-			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
-			},
-			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
-			},
-			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
-			},
-			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
-			},
-			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
-			},
-			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
-			},
-			{
-				"circuit": "",
-				"driver": "",
-				"team": "",
-				"laps": 71,
-				"time": ""
+				"circuit": "Abu Dhabi",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING HONDA",
+				"laps": "58",
+				"time": "1:30:17.345"
 			}
 		],
 		"drivers": [
 			{
 				"post": 1,
 				"driver": "Max Verstappen",
-				"team": "",
-				"points": 125
+				"team": "RED BULL RACING HONDA",
+				"points": 395.5
 			},
 			{
 				"post": 2,
-				"driver": "Charles Leclerc",
-				"team": "",
-				"points": 116
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"points": 387.5
 			},
 			{
 				"post": 3,
-				"driver": "Sergio Perez",
-				"team": "",
-				"points": 110
+				"driver": "Valtteri Bottas",
+				"team": "MERCEDES",
+				"points": 226
 			},
 			{
 				"post": 4,
-				"driver": "George Russell",
-				"team": "",
-				"points": 84
+				"driver": "Sergio Perez",
+				"team": "RED BULL RACING HONDA",
+				"points": 190
 			},
 			{
 				"post": 5,
 				"driver": "Carlos Sainz",
-				"team": "",
-				"points": 83
+				"team": "FERRARI",
+				"points": 164.5
 			},
 			{
 				"post": 6,
-				"driver": "Lewis Hamilton",
-				"team": "",
-				"points": 50
+				"driver": "Lando Norris",
+				"team": "MCLAREN MERCEDES",
+				"points": 160
 			},
 			{
 				"post": 7,
-				"driver": "Lando Norris",
-				"team": "",
-				"points": 48
+				"driver": "Charles Leclerc",
+				"team": "FERRARI",
+				"points": 159
 			},
 			{
 				"post": 8,
-				"driver": "Valtteri Bottas",
-				"team": "",
-				"points": 40
+				"driver": "Daniel Ricciardo",
+				"team": "MCLAREN MERCEDES",
+				"points": 115
 			},
 			{
 				"post": 9,
-				"driver": "Esteban Ocon",
-				"team": "",
-				"points": 30
+				"driver": "Pierre Gasly",
+				"team": "ALPHATAURI HONDA",
+				"points": 110
 			},
 			{
 				"post": 10,
-				"driver": "Kevin Magnussen",
-				"team": "",
-				"points": 15
+				"driver": "Fernando Alonso",
+				"team": "ALPINE RENAULT",
+				"points": 81
 			},
 			{
 				"post": 11,
-				"driver": "Daniel Ricciardo",
-				"team": "",
-				"points": 11
+				"driver": "Esteban Ocon",
+				"team": "ALPINE RENAULT",
+				"points": 74
 			},
 			{
 				"post": 12,
-				"driver": "",
-				"team": "",
-				"points": 11
+				"driver": "Sebastian Vettel",
+				"team": "ASTON MARTIN MERCEDES",
+				"points": 43
 			},
 			{
 				"post": 13,
-				"driver": "",
-				"team": "",
-				"points": 10
+				"driver": "Lance Stroll",
+				"team": "ASTON MARTIN MERCEDES",
+				"points": 34
 			},
 			{
 				"post": 14,
-				"driver": "",
-				"team": "",
-				"points": 6
+				"driver": "Yuki Tsunoda",
+				"team": "ALPHATAURI HONDA",
+				"points": 32
 			},
 			{
 				"post": 15,
-				"driver": "",
-				"team": "",
-				"points": 5
+				"driver": "George Russell",
+				"team": "WILLIAMS MERCEDES",
+				"points": 16
 			},
 			{
 				"post": 16,
-				"driver": "",
-				"team": "",
-				"points": 3
+				"driver": "Kimi Räikkönen",
+				"team": "ALFA ROMEO RACING FERRARI",
+				"points": 10
 			},
 			{
 				"post": 17,
-				"driver": "",
-				"team": "",
-				"points": 2
+				"driver": "Nicholas Latifi",
+				"team": "WILLIAMS MERCEDES",
+				"points": 7
 			},
 			{
 				"post": 18,
-				"driver": "",
-				"team": "",
-				"points": 1
+				"driver": "Antonio Giovinazzi",
+				"team": "ALFA ROMEO RACING FERRARI",
+				"points": 3
 			},
 			{
 				"post": 19,
-				"driver": "",
-				"team": "",
+				"driver": "Mick Schumacher",
+				"team": "HAAS FERRARI",
 				"points": 0
 			},
 			{
 				"post": 20,
-				"driver": "",
-				"team": "",
+				"driver": "Robert Kubica",
+				"team": "ALFA ROMEO RACING FERRARI",
 				"points": 0
 			},
 			{
 				"post": 21,
-				"driver": "",
-				"team": "",
+				"driver": "Nikita Mazepin",
+				"team": "HAAS FERRARI",
 				"points": 0
 			}
 		],
 		"teams": [
 			{
 				"post": 1,
-				"team": "",
+				"team": "MERCEDES",
+				"points": 613.5
+			},
+			{
+				"post": 2,
+				"team": "RED BULL RACING HONDA",
+				"points": 585.5
+			},
+			{
+				"post": 3,
+				"team": "FERRARI",
+				"points": 323.5
+			},
+			{
+				"post": 4,
+				"team": "MCLAREN MERCEDES",
+				"points": 275
+			},
+			{
+				"post": 5,
+				"team": "ALPINE RENAULT",
+				"points": 155
+			},
+			{
+				"post": 6,
+				"team": "ALPHATAURI HONDA",
+				"points": 142
+			},
+			{
+				"post": 7,
+				"team": "ASTON MARTIN MERCEDES",
+				"points": 77
+			},
+			{
+				"post": 8,
+				"team": "WILLIAMS MERCEDES",
+				"points": 23
+			},
+			{
+				"post": 9,
+				"team": "ALFA ROMEO RACING FERRARI",
+				"points": 13
+			},
+			{
+				"post": 10,
+				"team": "HAAS FERRARI",
+				"points": 0
+			}
+		]
+	},
+	"2022": {
+		"races": [
+			{
+				"circuit": "Bahrain",
+				"driver": "Charles Leclerc",
+				"team": "FERRARI",
+				"laps": "57",
+				"time": "1:37:33.584"
+			},
+			{
+				"circuit": "Saudi Arabia",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING RBPT",
+				"laps": "50",
+				"time": "1:24:19.293"
+			},
+			{
+				"circuit": "Australia",
+				"driver": "Charles Leclerc",
+				"team": "FERRARI",
+				"laps": "58",
+				"time": "1:27:46.548"
+			},
+			{
+				"circuit": "Emilia Romagna",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING RBPT",
+				"laps": "63",
+				"time": "1:32:07.986"
+			},
+			{
+				"circuit": "Miami",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING RBPT",
+				"laps": "57",
+				"time": "1:34:24.258"
+			},
+			{
+				"circuit": "Spain",
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING RBPT",
+				"laps": "66",
+				"time": "1:37:20.475"
+			},
+			{
+				"circuit": "Monaco",
+				"driver": "Sergio Perez",
+				"team": "RED BULL RACING RBPT",
+				"laps": "64",
+				"time": "1:56:30.265"
+			}
+		],
+		"drivers": [
+			{
+				"post": 1,
+				"driver": "Max Verstappen",
+				"team": "RED BULL RACING RBPT",
+				"points": 125
+			},
+			{
+				"post": 2,
+				"driver": "Charles Leclerc",
+				"team": "FERRARI",
+				"points": 116
+			},
+			{
+				"post": 3,
+				"driver": "Sergio Perez",
+				"team": "RED BULL RACING RBPT",
+				"points": 110
+			},
+			{
+				"post": 4,
+				"driver": "George Russell",
+				"team": "MERCEDES",
+				"points": 84
+			},
+			{
+				"post": 5,
+				"driver": "Carlos Sainz",
+				"team": "FERRARI",
+				"points": 83
+			},
+			{
+				"post": 6,
+				"driver": "Lewis Hamilton",
+				"team": "MERCEDES",
+				"points": 50
+			},
+			{
+				"post": 7,
+				"driver": "Lando Norris",
+				"team": "MCLAREN MERCEDES",
+				"points": 48
+			},
+			{
+				"post": 8,
+				"driver": "Valtteri Bottas",
+				"team": "ALFA ROMEO FERRARI",
+				"points": 40
+			},
+			{
+				"post": 9,
+				"driver": "Esteban Ocon",
+				"team": "ALPINE RENAULT",
+				"points": 30
+			},
+			{
+				"post": 10,
+				"driver": "Kevin Magnussen",
+				"team": "HAAS FERRARI",
+				"points": 15
+			},
+			{
+				"post": 11,
+				"driver": "Daniel Ricciardo",
+				"team": "MCLAREN MERCEDES",
+				"points": 11
+			},
+			{
+				"post": 12,
+				"driver": "Yuki Tsunoda",
+				"team": "ALPHATAURI RBPT",
+				"points": 11
+			},
+			{
+				"post": 13,
+				"driver": "Fernando Alonso",
+				"team": "ALPINE RENAULT",
+				"points": 10
+			},
+			{
+				"post": 14,
+				"driver": "Pierre Gasly",
+				"team": "ALPHATAURI RBPT",
+				"points": 6
+			},
+			{
+				"post": 15,
+				"driver": "Sebastian Vettel",
+				"team": "ASTON MARTIN ARAMCO MERCEDES",
+				"points": 5
+			},
+			{
+				"post": 16,
+				"driver": "Alexander Albon",
+				"team": "WILLIAMS MERCEDES",
+				"points": 3
+			},
+			{
+				"post": 17,
+				"driver": "Lance Stroll",
+				"team": "ASTON MARTIN ARAMCO MERCEDES",
+				"points": 2
+			},
+			{
+				"post": 18,
+				"driver": "Zhou Guanyu",
+				"team": "ALFA ROMEO FERRARI",
+				"points": 1
+			},
+			{
+				"post": 19,
+				"driver": "Mick Schumacher",
+				"team": "HAAS FERRARI",
+				"points": 0
+			},
+			{
+				"post": 20,
+				"driver": "Nico Hulkenberg",
+				"team": "ASTON MARTIN ARAMCO MERCEDES",
+				"points": 0
+			},
+			{
+				"post": 21,
+				"driver": "Nicholas Latifi",
+				"team": "WILLIAMS MERCEDES",
+				"points": 0
+			}
+		],
+		"teams": [
+			{
+				"post": 1,
+				"team": "RED BULL RACING RBPT",
 				"points": 235
 			},
 			{
 				"post": 2,
-				"team": "",
+				"team": "FERRARI",
 				"points": 199
 			},
 			{
 				"post": 3,
-				"team": "",
+				"team": "MERCEDES",
 				"points": 134
 			},
 			{
 				"post": 4,
-				"team": "",
+				"team": "MCLAREN MERCEDES",
 				"points": 59
 			},
 			{
 				"post": 5,
-				"team": "",
+				"team": "ALFA ROMEO FERRARI",
 				"points": 41
 			},
 			{
 				"post": 6,
-				"team": "",
+				"team": "ALPINE RENAULT",
 				"points": 40
 			},
 			{
 				"post": 7,
-				"team": "",
+				"team": "ALPHATAURI RBPT",
 				"points": 17
 			},
 			{
 				"post": 8,
-				"team": "",
+				"team": "HAAS FERRARI",
 				"points": 15
 			},
 			{
 				"post": 9,
-				"team": "",
+				"team": "ASTON MARTIN ARAMCO MERCEDES",
 				"points": 7
 			},
 			{
 				"post": 10,
-				"team": "",
+				"team": "WILLIAMS MERCEDES",
 				"points": 3
 			}
 		]
